# wr_praxis_5

./: pyproject.toml
test/: lib.py  tests.py
wr_praxis_5/: main.py
