[tool.poetry]
name = "wr-praxis-5"
version = "0.1.0"
description = ""
authors = ["Amirhossein Dabaghmanesh <58168246+artinalbert@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
